--- a/pizza.css
+++ b/pizza.css
@@ -2,3 +2,8 @@
     text-align: center;
     border-radius: 20px;
 }
+
+body{
+    background-image: url(hatter.jpg);
+    background-attachment: fixed;
+}
