--- a/pizza.css
+++ b/pizza.css
@@ -7,3 +7,7 @@ body{
     background-image: url(hatter.jpg);
     background-attachment: fixed;
 }
+
+#kinalat{
+    border-bottom: 2px dotted blue;
+}
