--- a/pizza.css
+++ b/pizza.css
@@ -12,3 +12,12 @@ body{
 #kinalat{
     border-bottom: 2px dotted blue;
 }
+
+a, a:link, a:hover, a:visited, a:active{
+    color:yellow;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
